workspace size and full space size

--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
     <div class="container">
         <div id="left">
             <p>Hero</p>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
-            <div class="list" draggable="true"><img src="images/test1.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero1.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero2.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero3.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero4.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero5.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero6.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/hero7.jpg"></div>
+            <p>Main</p>
+            <div class="list" draggable="true"><img src="assets/main1.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/main2.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/main3.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/main4.jpg"></div>
+            <div class="list" draggable="true"><img src="assets/main5.jpg"></div>
             <p>About</p>
             <div class="list" draggable="true"><img src="images/test2.jpg"></div>
             <div class="list" draggable="true"><img src="images/test2.jpg"></div>
