javascript and clear all button added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <div id="right"></div>
 
             <button id="saveAsBtn">Save WireFrame</button>
+            <button id="clearAllBtn">Clear All</button>
         </div>
     </div>
 <script src="javascript/scripts.js"></script>
