animation added to header on load

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Website Wireframe Builder | Drag & drop | By ChrisDayPro</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <div class="wrapper">
-            <p>Wireframe <span>Builder</span></p>
+            <div class="cssanimation leBeat sequence">
+                Wireframe Builder
+            </div>
             <ul>
                 <li>About</li>
                 <li><a href="mailto:chrisdaypro@protonmail.com?subject=Hi%20there" target="_blank" class="email-link">Email me</a></li>
@@ -74,5 +77,6 @@
 <script src="javascript/scripts.js"></script>
 <script src="https://kit.fontawesome.com/97e5723333.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script>
 </body>
 </html>
