`Added new content and comments to index.html`

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </header>
     <div class="container">
         <div id="left">
+            <p>Header</p>
+            <!-- header images -->
+
             <p>Hero</p>
             <div class="list" draggable="true"><img src="assets/hero1.jpg"></div>
             <div class="list" draggable="true"><img src="assets/hero2.jpg"></div>
@@ -31,6 +34,8 @@
             <div class="list" draggable="true"><img src="assets/hero5.jpg"></div>
             <div class="list" draggable="true"><img src="assets/hero6.jpg"></div>
             <div class="list" draggable="true"><img src="assets/hero7.jpg"></div>
+            <p>Section Breaks</p>
+            <!-- section break images -->
             <p>Main</p>
             <div class="list" draggable="true"><img src="assets/main1.jpg"></div>
             <div class="list" draggable="true"><img src="assets/main2.jpg"></div>
